--- a/index.html
+++ b/index.html
@@ -80,6 +80,53 @@
           </div>
         </div>
       </section>
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="img/cases/cases1.jpg" alt="">
+            <img src="img/cases/cases2.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="img/cases/cases3.jpg" alt="">
+            <img src="img/cases/cases4.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="img/cases/cases5.jpg" alt="">
+            <img src="img/cases/cases6.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="img/cases/cases7.jpg" alt="">
+            <img src="img/cases/cases8.jpg" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- Blog -->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/blog/blog1.jpg" alt="">
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>April 16 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read Our Blog
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
