--- a/index.html
+++ b/index.html
@@ -127,6 +127,70 @@
           </div>
         </div>
       </section>
+      <!-- Team -->
+      <section id="team" class="team section-padding">
+        <header class="section-header">
+          <h4>Who we are</h4>
+          <h2>Our Professional Team</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
+        </header>
+        <div class="flex-items">
+          <div>
+            <img src="img/team/person1.jpg" alt="">
+            <h4>John Doe</h4>
+            <p>President</p>
+          </div>
+          <div>
+            <img src="img/team/person2.jpg" alt="">
+            <h4>Jane Doe</h4>
+            <p>Vice President</p>
+          </div>
+          <div>
+            <img src="img/team/person3.jpg" alt="">
+            <h4>Steve Smith</h4>
+            <p>Marketing Director</p>
+          </div>
+        </div>
+      </section>
+      <!-- Contact -->
+      <section id="contact" class="contact flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/home/contact.jpg" alt="">
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-light">
+              <h2>Request callback</h2>
+              <form class="callback-form" action="" method="post">
+                <div class="form-control">
+                  <label for="name"></label>
+                  <input type="text" name="name" id="name" placeholder="Enter name">
+                </div>
+                <div class="form-control">
+                  <label for="email"></label>
+                  <input type="email" name="email" id="email" placeholder="Enter email">
+                </div>
+                <div class="form-control">
+                  <label for="phone"></label>
+                  <input type="text" name="phone" id="phone" placeholder="Enter phone number">
+                </div>
+                <input type="submit" id="submit" value="send" class="btn">
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer bg-dark">
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+      <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
   </body>
 </html>
